--- a/styles.css
+++ b/styles.css
@@ -86,3 +86,63 @@
             font-size: 1.2rem;
         }
     }
+    
+
+    .login-background {
+        background-image: url('https://i.pinimg.com/474x/30/35/16/303516b3d848265807856338aabd9572.jpg');
+        background-size: cover;
+        background-position: center;
+        height: 100vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .login-form {
+        background-color: rgba(0, 0, 0, 0.5);
+        padding: 40px;
+        border-radius: 10px;
+        max-width: 400px;
+        width: 100%;
+        color: rgb(239, 239, 239);
+    }
+
+    .login-form h1 {
+        font-size: 2.5rem;
+        margin-bottom: 30px;
+        text-align: center;
+    }
+
+    .form-control {
+        background-color:rgba(14, 13, 13, 0.1);
+        border: 1px solid rgba(202, 195, 195, 0.3);
+        color: rgb(238, 246, 238);
+    }
+    .form-control::placeholder {
+        color: rgba(238, 246, 238, 0.863); 
+    }
+    .btn-login {
+        width: 100%;
+        background-color: #e50914;
+        color: white;
+        padding: 12px;
+        font-size: 1.1rem;
+        border: none;
+        cursor: pointer;
+    }
+
+    .btn-login:hover {
+        background-color: #f40612;
+    }
+
+    .logo {
+        display: block;
+        margin: 0 auto 20px;
+        max-width: 200px;
+    }
+    .footer-text {
+        text-align: center;
+        margin-top: 20px;
+        color: white;
+        font-size: 0.9rem;
+    }
